@@ -1,3 +1,9 @@
+2006-05-11  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* src/kahua/persistence.scm
+	  Close lock file port explicitly in unlock-db for <kahua-db-fs>,
+	  in order to avoid lack of file descriptor.
+
 2006-05-09  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* src/kahua-spvr.scm, src/kahua-keyserv.scm:
